<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alex.todolistapp.ui.MainActivity"
    android:background="#D9DDDD">

    <Button
        android:text="@string/add"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"
        android:textSize="30sp"
        android:id="@+id/addButton"/>

    <TextView
        android:text="@string/title"
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addButton"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        android:layout_marginTop="15dp"
        android:textColor="#333838"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTextView"
        android:id="@+id/sortLayout"
        android:layout_marginTop="10dp"
        android:weightSum="100">

        <TextView
            android:text="Sort by:"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#08298A"
            android:textStyle="italic"
            android:layout_weight="30"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sortOrderSpinner"
            android:layout_weight="35"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ascDescSpinner"
            android:layout_weight="35"/>

    </LinearLayout>

    <TextView
        android:text="@string/empty_list"
        android:textColor="#333838"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/emptyTextView"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerView"
        android:layout_below="@+id/sortLayout"
        android:scrollbars="vertical"
        android:layout_marginTop="20dp"/>

</RelativeLayout>
